# myx-im

./: .env  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  chat.html  compose.yaml  debug.html  init.sql  run.sh  todo.md
.github/: copilot-instructions.md
.sqlx/: query-0b61b1b8be318714328d230b10f41eaff16ad117aba1ba0c9dd6192943127738.json  query-0c41912be245f251ddaed1b3c73b0b18bfab222d69c929a5d96c04ada3a7c28e.json  query-0f756907d7defd59a15d9bdae24ca19a5e258a7ee396a55292ab70d64a134138.json  query-13ff248510e9f855d641522b0f917b72fe83cbf7b11f93979818cbcb4b6e8f21.json  query-18ee957e123d0e112e2173bd05e5dfbe3f64eaa9e1100c2cbd43fe3a86fd5aae.json  query-1a9fd28492e027f7e4585366cd6fd11cc2954dffa615b9fd967573f3924f17ca.json  query-20221597579216b3bd4d7e5af3fb2c1dbc33839dc15808fb04f07e0bb2707f2a.json  query-22a4ac97e043f11d2dcc5d3602c744435fb02e52929fe3bee6a4edc58bfa69a4.json  query-295b198c2822914bd8fce711b9882bb1efa05fa2d04b6b76775f407ad3e798e5.json  query-3182034d724906dc0abfda4f32886d9efd2e1b171a57569ebeaf8923afdacac9.json  query-31c76504806ca70a0ab9800bc8dc1c3ad807f867688e92c6214aeb201456c071.json  query-405c9cbc4d740e8b52c8f143e1eb04d384ff019dbd7101a9f29ebdcea26c6f97.json  query-40b8c48100d9f364f0cc10a5204f00158f6af6bb9813de5474e4bccbd084c405.json  query-41fd14fb2cc793209a70a852d12cb9df9febcb3f2206c896316ce1deba7ce2b0.json  query-44dd792c5831a3600efc6d70de23f80bbf219244b080489cd8b0c67c722c5bbe.json  query-4a4d462e91550f43fd4b4fceb4fa5efe76a1f685f7fe33e5852a6763764b7857.json  query-4f017088cea42b410b8a6194fec37158ef19c133e0eed07ed0274627a5bf64cf.json  query-56d53ab9f9ab15d2fc917461f1780e0f3d82879f8de6fe89505b46069b1a3849.json  query-57cd1ab56d5adfe9d22dc6b9beca83a27c34740869e8835c6d74a9eb6f45751b.json  query-5f9ea2101be0d53fb8ad58cd00c0efc36945d62ea5f47d82a565157dd853fb4b.json  query-60c40d3af65a47c566a18ab7f4e185189c9568e10f477a93b8372f550799daf8.json  query-6110d918a71481af95c0044b154c3b5ba50b5a3aad49697383918af0c1254617.json  (+34 more)
doc/: api.md  bugfix.md  logging.md  schema.md  todo.md
examples/chat/: Cargo.toml  chat0.html  chat1.html  chat2.html
examples/chat/src/: main.rs
(+14 files in other folders)
