[package]
name = "myx-im"
version = "0.1.0"
edition = "2024"

[dependencies]
dashmap = "6.1.0"
futures-channel = "0.3.32"
futures-util = "0.3.32"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.3", features = ["full"] }
tokio-tungstenite = "0.29.0"
