[package]
name = "myx-im"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["ws"] }
futures-channel = "0.3.32"
futures-util = "0.3.32"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "any",
    "postgres",
    "uuid",
    "time",
] }
validator = { version = "0.20.0", features = ["derive"] }
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
bcrypt = "0.19.1"
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
uuid = { version = "1.23.1", features = ["serde", "v4"] }
dotenv = "0.15.0"
time = { version = "0.3.47", features = ["serde", "formatting", "parsing"] }

[dev-dependencies]
http-body-util = "0.1.3"
tower = "0.5.3"
